--- a/fonts/font.css
+++ b/fonts/font.css
@@ -1,22 +1,22 @@
 @font-face {
     font-family: '1EDITION';
-    src: url('../fonts/1EDITION.TTF') format('ttf');
+    src: url('/fonts/1EDITION.TTF') format('ttf');
 }
 
 @font-face {
     font-family: 'Helmet';
-    src: url('../fonts/Helmet-lWZV.otf') format('otf');
+    src: url('/fonts/Helmet-lWZV.otf') format('otf');
 }
 
 @font-face {
     font-family: 'Junegull';
-    src: url('../fonts/junegull.ttf') format('ttf');
+    src: url('/fonts/junegull.ttf') format('ttf');
 }
 
 @font-face {
     font-family: 'windows';
     src: url('windows_regular-webfont.woff2') format('woff2'),
-         url('../fonts/windows_regular-webfont.woff') format('woff');
+         url('/fonts/windows_regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
