--- a/about/style.css
+++ b/about/style.css
@@ -389,6 +389,27 @@ span {
     position: relative;
 }
 
+.buttonOneSpacing{
+    display: flex;
+    background-color: white;
+    color: #000000;
+    width: 100%;
+    border: black solid 2px;
+}
+
+.buttonTwoSpacing{
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    color: #000000;
+    width: 100%;
+    border: black solid 2px;
+}
+
+.b1, .b2:hover, .b3:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
 .hover-button {
     flex: 1;
     transition: all 0.3s ease-in-out;
@@ -396,14 +417,4 @@ span {
     object-fit: cover;
     width: 100%;
     height: 200px;
-}
-
-.hover-button:hover {
-    flex: 10;
-    z-index: 1;
-}
-
-.hover-button:not(:hover) {
-    flex: 0;
-    opacity: 0.5;
 }
