--- a/about/style.css
+++ b/about/style.css
@@ -151,6 +151,7 @@ button {
     font-family: 'helmet';
     text-decoration: none;
     line-height: 1.5;
+    background-color: #666666;
 }
 
 .footerRow {
@@ -272,7 +273,7 @@ button {
 .sidebar .close-btn:hover {
     color: black;
 }
-
+/* site */
 .here {
     color: rgb(218, 255, 214) !important;
 }
@@ -320,7 +321,7 @@ span {
     width: 50px;
     height: 50px;
     background-color: rgba(0, 0, 0, 0.2);
-    transform: translate(-50%, -50%) scale(1.5);
+    transform: translate(-50%, -50%) scale(1);
 }
 /* Page Style */
 
@@ -395,6 +396,7 @@ span {
     color: #000000;
     width: 100%;
     border: black solid 2px;
+    transition: transform 0.3s ease-in-out;
 }
 
 .buttonTwoSpacing{
@@ -404,10 +406,28 @@ span {
     color: #000000;
     width: 100%;
     border: black solid 2px;
+    transition: transform 0.3s ease-in-out;
 }
 
-.b1, .b2:hover, .b3:hover {
+.b1, .b2, .b3{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+    font-family: 'helmet';
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    text-align: center;
+    
+    transition: all 0.3s ease-in-out;
+}
+
+.b1:hover, .b2:hover, .b3:hover {
     background-color: rgba(0, 0, 0, 0.1);
+}
+
+.buttonOneSpacing:hover, .b2:hover, .b3:hover {
+    transform: scale(1.5);
 }
 
 .hover-button {
@@ -417,4 +437,5 @@ span {
     object-fit: cover;
     width: 100%;
     height: 200px;
+    border: 2px solid rgba(255, 255, 255, 0.8); 
 }
