--- a/about/style.css
+++ b/about/style.css
@@ -1,5 +1,14 @@
 @import url(/fonts/stylesheet.css);
 
+@keyframes scrollBackground {
+    0% {
+        background-position: 0% 0%;
+    }
+    100% {
+        background-position: 100% 100%;
+    }
+}
+
 @keyframes moveInCircle {
     0% {
         transform: rotate(0deg);
@@ -140,7 +149,6 @@ button {
 
 /* Footer styles */
 .footer {
-    margin-top: 15vh;
     border-top: white solid 2px;
     padding: 2rem;
     color: rgb(218, 255, 214);
@@ -376,18 +384,36 @@ span {
     font-size: 1.1rem;
 }
 
+.hover-buttonsBackground{
+    background: linear-gradient(to bottom, #000000, #ffffff, #000000), url('/imgs/topo.svg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    background-blend-mode: overlay;
+    margin: 0;
+    animation: scrollBackground 30s linear infinite;
+    margin-top: 1em;
+}
+
 .hover-buttons {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 50vh 0;
+    height: 100vh;
+    width: 50%;
+    position: relative;
+    left: 25%;
 }
 
 .button-container {
     display: flex;
     width: 100%;
-    max-width: 800px;
+    max-width: 100vw;
     position: relative;
+    border: 0px;
+    max-height: fit-content;
+    height: 50%;
 }
 
 .buttonOneSpacing{
@@ -397,6 +423,7 @@ span {
     width: 100%;
     border: black solid 2px;
     transition: transform 0.3s ease-in-out;
+    align-items: center;
 }
 
 .buttonTwoSpacing{
@@ -405,8 +432,9 @@ span {
     background-color: white;
     color: #000000;
     width: 100%;
-    border: black solid 2px;
+    border: black solid 0px;
     transition: transform 0.3s ease-in-out;
+    border: #000000 solid 2px;
 }
 
 .b1, .b2, .b3{
@@ -416,14 +444,20 @@ span {
     font-size: 1.5rem;
     font-family: 'helmet';
     color: rgb(0, 0, 0);
-    text-decoration: none;
+    text-decoration: underline;
     text-align: center;
-    
     transition: all 0.3s ease-in-out;
 }
 
-.b1:hover, .b2:hover, .b3:hover {
+.b2, .b3{
+    border: black solid 2px;
+}
+
+
+.b2:hover, .b3:hover {
     background-color: rgba(0, 0, 0, 0.1);
+    border: 2px black solid;
+    background: white;
 }
 
 .buttonOneSpacing:hover, .b2:hover, .b3:hover {
@@ -437,5 +471,20 @@ span {
     object-fit: cover;
     width: 100%;
     height: 200px;
-    border: 2px solid rgba(255, 255, 255, 0.8); 
+}
+
+#body.hidden {
+    display: none; /* Hide the button */
+}
+
+#body {
+    transition: filter 0.5s ease; /* Smooth transition for blur effect */
+}
+
+#body.blurred {
+    filter: blur(5px); /* Apply blur effect */
+}
+
+html {
+    scroll-behavior: smooth;
 }
